add an manual world parsing test